clusters/main/kubernetes/network/omada-controller/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omada-controller
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
