clusters/main/kubernetes/network/omada-controller/app/omada-gateway-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-gateway-proxy
  namespace: omada-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: omada-gateway-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: omada-gateway-proxy
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.27.4-alpine
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: config
          configMap:
            name: omada-gateway-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: omada-gateway-proxy
  namespace: omada-controller
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: omada-gateway-proxy
  ports:
    - name: http
      port: 8080
      targetPort: http
